# etf-trading-project

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  HANDOVER.md  PROGRESS.md  README.md  README.md.backup  ai-etf-project.skill  compare_coverage.py  docker-compose.dev.yml  docker-compose.research.yml  docker-compose.yml  package-lock.json  page_debug.html  start.sh  strategy.md  tradingview_cookies.pkl
.claude/: settings.json
auto-monitoring/: Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json
data-scraping/: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  README_AUTOMATED.md  TRADINGVIEW_SELECTORS.md  baseline.ipynb  check_all_tables.py  check_csv_files.py  check_data_status.py  check_db_time.py  check_schema.py  pyproject.toml  test_scraper.py  tradingview_playwright_scraper.py  tradingview_playwright_scraper_upload.py  tradingview_scraper.py
ml-service/: Dockerfile.research  Dockerfile.serving  README.md  pyproject.toml
ml-service/app/: config.py  database.py  main.py  models.py  schemas.py
ml-service/app/routers/: db_viewer.py  factsheet.py  predictions.py
ml-service/app/services/: factsheet_service.py  model_loader.py  prediction_service.py  processed_data_service.py
ml-service/app/submissions/: 2020.tabpfn_v2.submission.csv  2021.tabpfn_v2.submission_250112.csv  2022.tabpfn_v2.submission.csv  2023.tabpfn_v2.submission.csv
ml-service/experiments/: ensemble_pipeline.py  experiment_pipeline.py  pipeline.py  run_experiment.py  tabpfn_pipeline.py  tabpfn_pipeline_v2.py
ml-service/ml/: __init__.py  config.py
ml-service/ml/features/: __init__.py  cross_sectional.py  decomposition.py  enhanced.py  interaction.py  momentum.py  patterns.py  pipeline.py  returns.py  technical.py  volatility.py  volume.py
ml-service/ml/features/ahnlab/: __init__.py  constants.py  cross_sectional.py  engineered.py  macro.py  target.py  technical.py
ml-service/ml/features/data_providers/: __init__.py  base.py  mysql_provider.py  yfinance_provider.py
ml-service/ml/models/: __init__.py  ahnlab_lgbm.py  base_model.py  ensemble_model.py  factory.py  lightgbm_model.py  linear_models.py  tabpfn_model.py  trainer.py  tree_models.py
ml-service/ml/utils/: __init__.py  evaluation.py  experiment_logger.py
ml-service/scripts/: train_ahnlab.py  train_regressor.py
trading-service/: .env.example  Dockerfile  INTEGRATION.md  check.ipynb  kis_api_test.ipynb  pyproject.toml  search.md  test_kis_connection.py
trading-service/app/: config.py  database.py  main.py  models.py  schemas.py
trading-service/app/routers/: health.py  history.py  trading.py
trading-service/app/services/: capital_manager.py  cycle_manager.py  holiday_calendar.py  kis_client.py  ranking_client.py  trade_executor.py
trading-service/scripts/: trade-daily.sh
trading-service/tests/: test_capital_manager.py  test_cycle_manager.py  test_kis_client.py
(+195 files in other folders)
