[tool.poetry]
name = "ml-service"
version = "2.0.0"
description = "ETF Trading ML Service - Production API with Research Capabilities"
authors = ["ahnbi2"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Core Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"

# Data Processing
pandas = "^2.1.4"
numpy = "^2.2.6"

# ML Inference
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"

# Utilities
python-multipart = "^0.0.6"
joblib = "^1.3.2"

[tool.poetry.group.research]
optional = true

[tool.poetry.group.research.dependencies]
xgboost = "^2.0.0"
catboost = "^1.2.0"
tabpfn = ">=0.1.11"
pandas-ta = ">=0.3.14b0"
yfinance = "^0.2.28"
requests = "^2.31.0"
tqdm = "^4.66.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
black = "^23.7.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
