[tool.poetry]
name = "trading-service"
version = "1.0.0"
description = "ETF 자동매매 서비스 - KIS API 기반 63일 FIFO 순환매매"
authors = ["ahnbi2"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Core Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.23"

# HTTP Client
httpx = "^0.27.0"

# Scheduler
apscheduler = "^3.10.0"

# KRX Calendar
exchange-calendars = "^4.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
black = "^23.7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
